--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,7 +21,7 @@ jobs:
           server: ${{ secrets.FTP_HOST }}
           username: ${{ secrets.FTP_USER }}
           password: ${{ secrets.FTP_PASS }}
-          local-dir: submodules/WebApplication  # Replace with actual submodule path
+          local-dir: submodules/WebApplication/  # Replace with actual submodule path
           server-dir: /
 
       - name: Upload src/ files to FTP (Directory B)
@@ -30,5 +30,5 @@ jobs:
           server: ${{ secrets.FTP_HOST }}
           username: ${{ secrets.FTP_USER }}
           password: ${{ secrets.FTP_PASS }}
-          local-dir: src
+          local-dir: src/
           server-dir: /applications/branchmanager/
