--- a/.github/workflows/deploy-test.yml
+++ b/.github/workflows/deploy-test.yml
@@ -6,6 +6,13 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+
     steps:
-      - name: Echo secret length
-        run: echo "FTP_PASS length: ${#${{ secrets.FTP_PASS }}}"
+      - name: Check if FTP_PASS is set
+        run: |
+          if [ -z "${{ secrets.FTP_PASS }}" ]; then
+            echo "FTP_PASS is empty or not set"
+            exit 1
+          else
+            echo "FTP_PASS is set"
+          fi
