Configure FTP protocol and passive mode in deploy.yml
Added FTP protocol and passive mode settings for file uploads.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,6 +29,8 @@ jobs:
           server: ${{ secrets.FTP_HOST }}
           username: ${{ secrets.FTP_USER }}
           password: ${{ secrets.FTP_PASS }}
+          protocol: ftp
+          passive: true
           local-dir: WebApplication/
           server-dir: /
 
@@ -38,5 +40,7 @@ jobs:
           server: ${{ secrets.FTP_HOST }}
           username: ${{ secrets.FTP_USER }}
           password: ${{ secrets.FTP_PASS }}
+          protocol: ftp
+          passive: true
           local-dir: src/
           server-dir: /applications/branchmanager/
